# qwen-crud-api

./: .gitignore  README.md  main.py  pyproject.toml
app/api/: deps.py
app/api/routers/: users.py
app/core/: config.py  database.py
app/crud/: user.py
app/models/: user.py
app/schemas/: user.py
tests/: conftest.py
tests/test_integration/: test_users.py
tests/test_unit/: test_crud_user.py  test_database.py  test_deps.py  test_models_user.py  test_schemas_user.py  test_users_router.py
